// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`ClayModal renders 1`] = `
<body
  class="modal-open"
>
  <div>
    <div
      class="modal-backdrop fade show"
    />
    <div
      class="fade modal d-block show"
    >
      <div
        style="margin: auto; max-width: 0;"
      >
        <div
          class="modal-dialog"
          tabindex="-1"
        >
          <div
            class="modal-content"
          >
            <div
              class="modal-header"
            >
              <div
                class="modal-title"
              >
                Foo
              </div>
              <button
                aria-label="close"
                class="close btn btn-unstyled"
                type="button"
              >
                <svg
                  class="lexicon-icon lexicon-icon-times"
                  role="presentation"
                >
                  <use
                    xlink:href="icons.svg#times"
                  />
                </svg>
              </button>
            </div>
            <div
              class="modal-body"
            >
              <h1>
                Hello world!
              </h1>
            </div>
            <div
              class="modal-footer"
            >
              <div
                class="modal-item-first"
              />
              <div
                class="modal-item"
              />
              <div
                class="modal-item-last"
              >
                <button
                  class="btn btn-primary"
                  type="button"
                >
                  Primary
                </button>
              </div>
            </div>
          </div>
        </div>
      </div>
    </div>
  </div>
  <div />
</body>
`;

exports[`ClayModal renders Header w/ low-level API 1`] = `
<body
  class="modal-open"
>
  <div>
    <div
      class="modal-backdrop fade show"
    />
    <div
      class="fade modal d-block show"
    >
      <div
        style="margin: auto; max-width: 0;"
      >
        <div
          class="modal-dialog"
          tabindex="-1"
        >
          <div
            class="modal-content"
          >
            <div
              class="modal-header"
            >
              <div
                class="modal-item-group"
              >
                <div
                  class="modal-item"
                >
                  <div
                    class="modal-title-section"
                  >
                    <div
                      class="modal-title"
                    >
                      Modal Title
                    </div>
                  </div>
                </div>
                <div
                  class="modal-item modal-item-shrink"
                >
                  <div
                    class="modal-subtitle-section"
                  >
                    <div
                      class="modal-subtitle"
                    >
                      Modal Subtitle
                    </div>
                  </div>
                </div>
              </div>
            </div>
          </div>
        </div>
      </div>
    </div>
  </div>
  <div />
</body>
`;

exports[`ClayModal renders a body component with url 1`] = `
<body
  class="modal-open"
>
  <div>
    <div
      class="modal-backdrop fade show"
    />
    <div
      class="fade modal d-block show"
    >
      <div
        style="margin: auto; max-width: 0;"
      >
        <div
          class="modal-dialog"
          tabindex="-1"
        >
          <div
            class="modal-content"
          >
            <div
              class="modal-body modal-body-iframe"
            >
              <iframe
                src="http://localhost"
                title="http://localhost"
              />
            </div>
          </div>
        </div>
      </div>
    </div>
  </div>
  <div />
</body>
`;

exports[`ClayModal renders a footer component with buttons 1`] = `
<body
  class="modal-open"
>
  <div>
    <div
      class="modal-backdrop fade show"
    />
    <div
      class="fade modal d-block show"
    >
      <div
        style="margin: auto; max-width: 0;"
      >
        <div
          class="modal-dialog"
          tabindex="-1"
        >
          <div
            class="modal-content"
          >
            <div
              class="modal-footer"
            >
              <div
                class="modal-item-first"
              >
                <button
                  class="btn btn-primary"
                  type="button"
                >
                  Bar
                </button>
              </div>
              <div
                class="modal-item"
              >
                <button
                  class="btn btn-primary"
                  type="button"
                >
                  Baz
                </button>
              </div>
              <div
                class="modal-item-last"
              >
                <button
                  class="btn btn-primary"
                  type="button"
                >
                  Foo
                </button>
              </div>
            </div>
          </div>
        </div>
      </div>
    </div>
  </div>
  <div />
</body>
`;

exports[`ClayModal renders with Header 1`] = `
<body
  class="modal-open"
>
  <div>
    <div
      class="modal-backdrop fade show"
    />
    <div
      class="fade modal d-block show"
    >
      <div
        style="margin: auto; max-width: 0;"
      >
        <div
          class="modal-dialog"
          tabindex="-1"
        >
          <div
            class="modal-content"
          >
            <div
              class="modal-header"
            >
              <div
                class="modal-title"
              >
                Foo
              </div>
              <button
                aria-label="close"
                class="close btn btn-unstyled"
                type="button"
              >
                <svg
                  class="lexicon-icon lexicon-icon-times"
                  role="presentation"
                >
                  <use
                    xlink:href="icons.svg#times"
                  />
                </svg>
              </button>
            </div>
          </div>
        </div>
      </div>
    </div>
  </div>
  <div />
</body>
`;

exports[`ClayModal renders with size 1`] = `
<body
  class="modal-open"
>
  <div>
    <div
      class="modal-backdrop fade show"
    />
    <div
      class="fade modal d-block show"
    >
      <div
        style="margin: auto; max-width: 0;"
      >
        <div
          class="modal-dialog modal-lg"
          tabindex="-1"
        >
          <div
            class="modal-content"
          />
        </div>
      </div>
    </div>
  </div>
  <div />
</body>
`;

exports[`ClayModal renders with status 1`] = `
<body
  class="modal-open"
>
  <div>
    <div
      class="modal-backdrop fade show"
    />
    <div
      class="fade modal d-block show"
    >
      <div
        style="margin: auto; max-width: 0;"
      >
        <div
          class="modal-dialog modal-success"
          tabindex="-1"
        >
          <div
            class="modal-content"
          />
        </div>
      </div>
    </div>
  </div>
  <div />
</body>
`;
